--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
+    "@google/genai": "^0.13.0",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
     "request": "^2.88.2"
