--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.6.7",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2",
+    "play-sound": "^1.1.6",
     "request": "^2.88.2"
   },
   "repository": {
