--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "- .envファイルを作成し以下のようにトークンを設定してください\r ```\r DISCORD_TOKEN = 'トークンを入力'\r ```\r - DISCORD_TOKENを取得する手順は以下のサイトから確認できます．\r     - https://discord.com/developers/docs/quick-start/getting-started\r     - YOUR_BOT_TOKENの設定のみ行ってください(YOUR_APP_ID, YOUR_PUBLIC_KEYは不要です)\r     - DISCORD_TOKENはYOUR_BOT_TOKENの事を指しています",
+  "description": "",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
@@ -22,9 +22,12 @@
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
     "@google/generative-ai": "^0.24.1",
+    "avconv": "^3.1.0",
     "axios": "^1.6.7",
     "discord.js": "^14.19.3",
     "dotenv": "^16.5.0",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "node-fetch": "^3.3.2",
     "play-sound": "^1.1.6",
     "request": "^2.88.2"
