--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "ts-node": "^10.9.2",
