--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "start": "node build/src/main.js",
     "compile": "tsc -p .",
     "lint": "eslint . --ext .ts"
@@ -16,6 +17,7 @@
     "@eslint/js": "^9.26.0",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "ts-node": "^10.9.2",
