--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node src/main.ts",
-    "start": "node build/main.js",
-    "compile": "tsc -p ."
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "start": "node build/src/main.js",
+    "compile": "tsc -p .",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +17,13 @@
     "@eslint/js": "^9.26.0",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.50.1",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
