--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:coverage": "vitest run --coverage",
     "start": "node build/src/main.js",
     "compile": "tsc -p .",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "docs": "typedoc"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.15",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.50.1",
     "vitest": "^4.0.16"
